[package]
name = "tor-v3-vanity"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2021"
description = "A TOR v3 vanity url generator designed to run on an nvidia GPU."
license = "MIT"
repository = "https://github.com/dr-bonez/tor-v3-vanity"
documentation = "http://docs.rs/tor-v3-vanity"
readme = "README.md"
keywords = ["tor", "v3", "vanity", "gpu", "cuda"]
include = ["src/**/*", "Cargo.toml", "core/**/*", "build.rs", "README.md", "LICENSE", "foo/bar"]

[[bin]]
name = "t3v"
test = false
bench = false
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
chrono = "0.4.38"
clap = "2.34.0"
crossbeam-channel = "0.5.13"
ed25519-dalek = "1"
failure = "0.1.8"
num_cpus = "1.16.0"
rand = "0.8.5"
rustacuda = "0.1.3"
sha3 = "0.10.8"
tor-v3-vanity-core = { version = "0.1.0", path = "./core" }

[build-dependencies]
cuda_builder = "*"
anyhow = "1.0.89"

[patch.crates-io]
cuda_std = { git = 'https://github.com/dssgabriel/Rust-CUDA', branch = "port-to-libnvvm2" }
cust = { git = 'https://github.com/dssgabriel/Rust-CUDA', branch = "port-to-libnvvm2" }
cuda_builder = { git = 'https://github.com/dssgabriel/Rust-CUDA', branch = "port-to-libnvvm2" }