[package]
name = "tor-v3-vanity-core"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2021"
description = "Needed for https://crates.io/crate/tor-v3-vanity"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
cuda_std = "0.2.2"
cust = "0.3.2"
ed25519-compact =  { version = "2.1.1", default-features = false }
gpu_rand = "0.1.3"
 

[build-dependencies]
cuda_builder = "*"
anyhow = "1.0.89"

[patch.crates-io]
cuda_std = { git = 'https://github.com/dssgabriel/Rust-CUDA', branch = "port-to-libnvvm2" }
cust = { git = 'https://github.com/dssgabriel/Rust-CUDA', branch = "port-to-libnvvm2" }
cuda_builder = { git = 'https://github.com/dssgabriel/Rust-CUDA', branch = "port-to-libnvvm2" }